fixes focus z-index; fixes topbar focus on ontology page

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -94,6 +94,7 @@ a:link,a:visited,a:active,a:hover,a:focus {
 
 :focus {
   outline: 2px solid black;
+  z-index: 1;
 }
 
 a:hover {
@@ -164,15 +165,20 @@ ul {
   margin-bottom: 20px;
 }
 
+.topbar > a {
+  display: inline-block;
+  margin: 4px;
+  left: 2.5%;
+  position: sticky;
+}
+
 .topbar-white {
   background-color: #ffffff;
 }
 
 #service-name {
-  line-height: 50px;
+  line-height: 42px;
   margin: 0;
-  left: 50px;
-  position: relative;
 }
 
 .topbar-white > #language, .topbar-white > #navigation {
@@ -184,7 +190,7 @@ ul {
   height: 50px;
   line-height: 70px;
   padding-left: 0;
-  padding-right: 2%;
+  padding-right: 2.5%;
   text-align: right;
   width: auto;
 }
@@ -192,12 +198,12 @@ ul {
 #language > .dropdown-menu {
   z-index: 9002;
   position: fixed;
-  padding-right: 2%;
+  padding-right: 2.5%;
   border-radius: 0;
   margin-top: 0;
   padding: 0;
   top: 45px;
-  right: 2%;
+  right: 2.5%;
 }
 
 #language > .dropdown-menu > li, #language > .dropdown-menu > li > a {
@@ -1436,7 +1442,6 @@ ul.nav-tabs > li {
   width: auto;
   background-color: white;
   display: block;
-  z-index: 1;
 }
 
 span.date-info {
@@ -1853,7 +1858,9 @@ body, .versal, h1, h2, p, .versal-bold {
 @media (max-width: 700px) {
 
   .topbar > a {
-    display: none;
+    position: absolute;
+    left: 100%;
+    outline-offset: -2px;
   }
 
   .topbar {
@@ -2041,10 +2048,6 @@ body, .versal, h1, h2, p, .versal-bold {
 @media (min-width: 1260px) {
   .main-container, .headerbar, .topbar {
     width: 1190px;
-  }
-
-  #service-name {
-    left: 0 !important;
   }
 
   .frontpage-alert {
